@@ -1,3 +1,9 @@
+2006-06-06  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf.c (_bfd_elf_init_private_section_data): Comment typo.
+	(elfcore_grok_nto_status): Use long instead of pid_t.
+	(elfcore_grok_nto_regs, elfcore_grok_nto_note): Likewise.
+
 2006-06-05  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* po/Make-in (top_builddir): Define.
